fix: use summary and set app wide letter spacing

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,7 @@
 body {
   background-color: $text-area-gray;
   line-height: 1.3;
+  letter-spacing: 0.0375rem;
 }
 
 button {
